# SIMD-Matcher

./: CMakeLists.txt  LICENSE  README.md
hot/commons/include/hot/commons/: Algorithms.hpp  BiNode.hpp  BiNodeInformation.hpp  BiNodeInterface.hpp  BitMask32.hpp  DiscriminativeBit.hpp  EntryVector.hpp  EntryVectorInterface.hpp  InsertInformation.hpp  MultiMaskPartialKeyMapping.hpp  MultiMaskPartialKeyMappingInterface.hpp  NodeAllocationInformations.hpp  NodeMergeInformation.hpp  NodeParametersMapping.hpp  PartialKeyMappingBase.hpp  PartialKeyMappingHelpers.hpp  SIMDHelper.hpp  SingleMaskPartialKeyMapping.hpp  SingleMaskPartialKeyMappingInterface.hpp  SparsePartialKeys.hpp  TwoEntriesNode.hpp
hot/single-threaded/include/hot/singlethreaded/: HOTSingleThreaded.hpp  HOTSingleThreadedChildPointer.hpp  HOTSingleThreadedChildPointerInterface.hpp  HOTSingleThreadedDeletionInformation.hpp  HOTSingleThreadedInsertStackEntry.hpp  HOTSingleThreadedInterface.hpp  HOTSingleThreadedIterator.hpp  HOTSingleThreadedNode.hpp  HOTSingleThreadedNodeBase.hpp  HOTSingleThreadedNodeBaseInterface.hpp  HOTSingleThreadedNodeInterface.hpp  MemoryPool.hpp
idx/benchmark-helpers/include/idx/benchmark/: Benchmark.hpp  BenchmarkCommandlineHelper.hpp  BenchmarkConfiguration.hpp  BenchmarkResult.hpp  DatFileBenchmark.hpp  InsertEvent.hpp
idx/content-helpers/include/idx/contenthelpers/: ContentEquals.hpp  KeyComparator.hpp  KeyUtilities.hpp  OptionalValue.hpp
idx/utils/: CMakeLists.txt
idx/utils/include/idx/utils/: 8ByteDatFileIO.hpp  DataSetGenerators.hpp  DataSetModifiers.hpp
libmatch/: CMakeLists.txt  basic_hot_tree.cpp  basic_hot_tree.hpp  basic_trie.cpp  basic_trie.hpp  linear_arbitrary.cpp  linear_arbitrary.hpp
tbb/cmake/: TBBConfig.cmake
test/: CMakeLists.txt  hot_tree.cpp  linear_arbitrary.cpp  prefix_kmeans.cpp
test/Benchmarks/: 4096rules_hot.txt  64rules.txt~  action8192.txt  ffff_lib_key.txt  ffff_lib_rule.txt  hot_rule5620.txt  hot_rule5620_small_keys_trans.txt  lib_rule5620.txt  lib_ruleS14096.txt  run.sh
