# Copyright (c) 2015 Flowgrammable.org
# All rights reserved

add_library(match STATIC 
    basic_trie
    basic_hot_tree
    linear_arbitrary)
#ADD_SUBDIRECTORY(hot)
#ADD_SUBDIRECTORY(idx)
#ADD_SUBDIRECTORY(content-helpers)
#ADD_SUBDIRECTORY(commons)
#ADD_SUBDIRECTORY(rowex)
#ADD_SUBDIRECTORY(single-threaded)
